Fix error message being shown at 140 characters, tweet word wrapping

--- a/sass/tweet.scss
+++ b/sass/tweet.scss
@@ -14,7 +14,7 @@ article.tweet {
   }
 
   p {
-    overflow-wrap: break-word;
+    word-break: break-word;
   }
 
   header {
